--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "David Gérard-Varet"
 title_separator          : "-"
 name                     : &name "David Gérard-Varet"
 description              : &description "Professor of Mathematics at Université de Paris"
-url                      : https://davidgerardvaret.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://dgerardv.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "dgerardv/davidgerardvaret.github.io"
+repository               : "dgerardv/dgerardv.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
