--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            :"dgerardv@gmail.com"
+  email            :
   researchgate     :  
   uri              :
   bitbucket        :
