--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "David Gerard-Varet"
   avatar           : "gerard_varet_small.jpg"
-  bio              : "Professor of Mathematics, Université de Paris"
+  bio              : "Professor, Université de Paris"
   location         : "Paris, France, Campus des Grands Moulins"
   employer         :
   pubmed           : 
