--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "David    Gerard-Varet"
+  name             : "David"
+  name             : "Gerard-Varet"
   avatar           : "gerard_varet_small.jpg"
   bio              : "Professor, Université de Paris"
   location         : "Paris, France, Campus des Grands Moulins"
