--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "David"
+  name             : "D."
   name             : "Gerard-Varet"
   avatar           : "gerard_varet_small.jpg"
   bio              : "Professor, Université de Paris"
