--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "D.Gerard-Varet"
+  name             : "D. Gérard-Varet"
   avatar           : "gerard_varet_small.jpg"
   bio              : "Professor, Université de Paris"
   location         : "Paris, France, Campus des Grands Moulins"
