--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "D. Gérard-Varet"
   avatar           : "gerard_varet_small.jpg"
   bio              : "Professor, Université de Paris"
-  location         : "Paris, France"
-  location         : "Campus des Grands Moulins"
+  location         : "Paris, France, 
+  Campus des Grands Moulins"
   employer         :
   pubmed           : 
   googlescholar    : 
