--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,8 @@ analytics:
 author:
   name             : "D. Gérard-Varet"
   avatar           : "gerard_varet_small.jpg"
-  bio              : "Professor, Université de Paris"
-  location         : "Paris, France, 
-  Campus des Grands Moulins"
+  bio              : "Professor,_Université de Paris"
+  location         : "Paris, France,_Campus des Grands Moulins"
   employer         :
   pubmed           : 
   googlescholar    : 
