--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "D. Gérard-Varet"
   avatar           : "gerard_varet_small.jpg"
-  bio              : "Professor,_Université de Paris"
-  location         : "Paris, France,_Campus des Grands Moulins"
-  employer         :
+  bio              : "Professor, Université de Paris"
+  location         : "Paris, France"
+  employer         : "Campus des Grands Moulins"
   pubmed           : 
   googlescholar    : 
   email            :
