--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,13 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Lecture Notes"
+    url: /lectures/    
 
   - title: "Teaching"
     url: /teaching/    
+    
+    
     
   #- title: "Portfolio"
   #  url: /portfolio/
