--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Research Papers"
     url: /publications/
 
-  %- title: "Lecture Notes"
-  %  url: /lectures/    
+  #- title: "Lecture Notes"
+  #  url: /lectures/    
 
   - title: "Teaching"
     url: /teaching/    
