--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "gerard_varet_small.jpg"
   bio              : "Professor, Université de Paris"
   location         : "Paris, France"
-  employer         : "Campus des Grands Moulins"
+  employer         : 
   pubmed           : 
   googlescholar    : 
   email            :
