--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "David Gérard-Varet"
-  avatar           : "mypcture.jpeg"
+  avatar           : "mypicture.jpeg"
   bio              : "Professor, Université de Paris"
   location         : "Paris, France"
   employer         : 
