--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,5 +20,9 @@ main:
   - title: "CV"
     url: /cv/
     
+  - title: "SingFlows"
+  url: /singflows/
+    
+    
   #- title: "Guide"
   #  url: /markdown/
