--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "David Gérard-Varet"
 title_separator          : "-"
 name                     : &name "David Gérard-Varet"
-description              : &description "Professor of Mathematics at Université de Paris"
+description              : &description "Professor of Mathematics at Université Paris Cité"
 url                      : https://dgerardv.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dgerardv/dgerardv.github.io"
