--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "David Gérard-Varet"
   avatar           : "mypicture.jpeg"
-  bio              : "Professor, Université de Paris"
+  bio              : "Professor, Université Paris Cité"
   location         : "Paris, France"
   employer         : 
   pubmed           : 
